Bugfix: fix preferencesModal width jump

--- a/src/scss/core/components/_preferences-modal.scss
+++ b/src/scss/core/components/_preferences-modal.scss
@@ -728,6 +728,7 @@ $service-toggle-knob-icon-width: 1.7px;
 
         &.pm--wide{
             max-width: 35em;
+            width: 100%;
 
             .pm__header,
             .pm__body,
